--- a/pos_app/templates/pos_app/customers.html
+++ b/pos_app/templates/pos_app/customers.html
@@ -65,13 +65,14 @@
                                                     <i class="fas fa-edit me-1"></i> Edit
                                                 </a>
                                             </li>
-                                            {% if customer.current_debt > 0 %}
                                             <li>
-                                                <a class="dropdown-item" href="javascript:void(0)" onclick="openCustomerCreditReport({{ customer.id }}, '{{ customer.full_name|escapejs }}')">
-                                                    <i class="fas fa-file-alt me-1 text-info"></i> Credit Report
+                                                <a class="dropdown-item" href="{% url 'pos:credit_report_customer' customer.id %}">
+                                                    <i class="fas fa-chart-line me-1 text-info"></i> Credit Report
+                                                    {% if customer.current_debt > 0 %}
+                                                        <span class="badge bg-warning text-dark ms-2">{{ business.currency_symbol }}{{ customer.current_debt|floatformat:0 }}</span>
+                                                    {% endif %}
                                                 </a>
                                             </li>
-                                            {% endif %}
                                             <li><hr class="dropdown-divider"></li>
                                             <li>
                                                 <form action="{% url 'pos:customer_delete' customer.id %}" method="post" style="display:inline;">
